--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "webpack": "^3.8.1"
   },
   "dependencies": {
+    "antd": "^2.13.9",
     "axios": "^0.17.0",
     "md5": "^2.2.1",
     "react": "^16.0.0",
